[package]
name = "bevy_networking_turbulence"
version = "0.1.0"
authors = ["Tomasz Sterna <tomasz@sterna.link>"]
edition = "2018"

[features]
default = ["use-udp"]
use-udp = ["naia-server-socket/use-udp"]
use-webrtc = ["naia-server-socket/use-webrtc", "naia-client-socket/wbindgen"]

[dependencies]
bevy_app = "0.4"
bevy_ecs = "0.4"
bevy_tasks = "0.4"
turbulence = "0.3"
naia-client-socket = { version = "0.5", features = ["multithread"] }
bytes = "1.0"
log = "0.4"
futures-lite = "1.11"
crossbeam-channel = "0.5"
cfg-if = "1.0"
instant = "0.1"
futures = "0.3"
futures-timer = "3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
naia-server-socket = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-timer = { version = "3.0", features = ["wasm-bindgen"] }

[dev-dependencies]
bevy = { version = "0.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
simple_logger = "1"
rand = "0.8"
console_error_panic_hook = "0.1"
console_log = "0.2"

[[example]]
name = "channels"
path = "examples/channels.rs"
required-features = ["bevy/default"]
